# CMake_menu

./: CMakeLists.txt  README.md
25-12-6.menu/: CMakeLists.txt
projects/: CMakeLists.txt
projects/obuchaika/: CMakeLists.txt
projects/sort/: CMakeLists.txt
projects/sort/src/: bubble_sort.cpp  bubble_sort.hpp
projects/test/: CMakeLists.txt  test_bubble.cpp
